--- a/.github/workflows/flutter_cicd.yml
+++ b/.github/workflows/flutter_cicd.yml
@@ -56,6 +56,17 @@ jobs:
         with:
           name: CI CD Build
           path: build/app/outputs/apk/release/app-release.apk
+            
+            
+      # Slack Integration STEP1 : Upload build to Slack
+      - name: Upload build to slack
+        uses: MeilCli/slack-upload-file@v3
+        with:
+         slack_token: ${{secrets.SLACK_BOT_TOKEN}}
+         channel_id: ${{ secrets.SLACK_CHANNEL_ID }}
+         file_path: build/app/outputs/apk/release/app-release.apk
+         initial_comment: 'post by slack-upload-file'
+
 
 
 
