--- a/.github/workflows/flutter_cicd.yml
+++ b/.github/workflows/flutter_cicd.yml
@@ -72,7 +72,7 @@ jobs:
         uses: rtCamp/action-slack-notify@v2
         with:
           status: ${{ job.status }}
-          text: "Build ${{ job.status }} for commit ${{ github.sha }} in branch ${{ github.ref }}."
+#          text: "Build ${{ job.status }} for commit ${{ github.sha }} in branch ${{ github.ref }}."
 
         env:
           SLACK_CHANNEL: flutter-cicd
