--- a/.github/workflows/flutter_cicd.yml
+++ b/.github/workflows/flutter_cicd.yml
@@ -70,8 +70,8 @@ jobs:
       # Slack Integration STEP2  : Sending notification on slack channel
       - name: Slack Notification
         uses: rtCamp/action-slack-notify@v2
-        with:
-          status: ${{ job.status }}
+#        with:
+#          status: ${{ job.status }}
 #          text: "Build ${{ job.status }} for commit ${{ github.sha }} in branch ${{ github.ref }}."
 
         env:
